static smart contract and static method modified
